# rdm-7_Dash

./: .clang-format  .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  RDM-7_User_Guide.md  README.md  SECURITY.md  USER_GUIDE.md  cmake_debug_output.txt  extract_widgets.py  git_status_output.txt  partitions.csv  rpm_meter_test.json  sdkconfig  sdkconfig.ci.double_fb  sdkconfig.defaults
.claude/: launch.json  settings.local.json
.github/workflows/: native-tests.yml  schema-check.yml
data/: editor.html
data/layouts/: layout_manual.md.resolved  rpm_meter_test.json
data/web/: index.html
docs/: README.md  WASM_PREVIEW_BUILD_GUIDE.md
docs/adr/: 0001-wifi-onboarding-reliability.md  0002-web-server-split-roadmap.md  0003-desktop-index-sync-plan.md  0004-performance-budgets.md  0005-html-source-of-truth.md  README.md
docs/handover/: 01-architecture.md  02-build-and-flash.md  03-widget-system.md  04-signal-and-can.md  05-storage-and-persistence.md  06-ui-and-screens.md  07-web-server-api.md  08-aux-systems.md  09-conventions-and-pitfalls.md  10-module-reference.md  README.md
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  lv_conf.h  main.c
main/can/: can_bus_test.c  can_bus_test.h  can_decode.c  can_decode.h  can_dispatch.c  can_dispatch.h  can_id_tracker.c  can_id_tracker.h  can_manager.c  can_manager.h  dtc_monitor.c  dtc_monitor.h  obd2.c  obd2.h  obd2_dtc_db.c  obd2_dtc_db.h  obd2_pids.c
main/design_mode/: CMakeLists.txt
main/embed/: RDM.rdmimg
main/include/: can_upload_secret.h  version.h
main/io/: wire_inputs.c  wire_inputs.h
main/layout/: CMakeLists.txt  default_layout.c  default_layout.h  ecu_presets.c  ecu_presets.h  layout_loader.c  layout_loader.h  layout_manager.c  layout_manager.h
main/net/: dns_hijack.c  dns_hijack.h  mdns_service.c  mdns_service.h  ota_handler.c  ota_handler.h  ota_update_dialog.c  ota_update_dialog.h  serial_commands.c  serial_commands.h  serial_protocol.c  serial_protocol.h  uart_protocol.c  uart_protocol.h  usb_cdc_protocol.c  usb_cdc_protocol.h  web_server.c  web_server.h  web_server_assets.c  web_server_captive.c  web_server_capture.c  web_server_gear.c  web_server_internal.h  web_server_layout.c  web_server_logger.c  web_server_obd2.c  web_server_ota.c  web_server_signals.c  web_server_system.c  web_server_touch.c  web_server_wifi.c  wifi_manager.c  wifi_manager.h
main/storage/: boot_assets.c  boot_assets.h  can_raw_logger.c  can_raw_logger.h  can_upload.c  can_upload.h  config_store.c  config_store.h  data_logger.c  data_logger.h  sd_manager.c  sd_manager.h  signal_replay.c  signal_replay.h  user_signals.c  user_signals.h
main/system/: crash_log.c  crash_log.h  device_id.c  device_id.h  display_capture.c  display_capture.h  heap_monitor.c  heap_monitor.h  night_mode.c  night_mode.h  rdm_settings.c  rdm_settings.h  remote_touch.c  remote_touch.h  screen_config.c  screen_config.h  storage.h
main/ui/: CMakeLists.txt  config_bridge.c  config_bridge.h  dashboard.c  dashboard.h  device_settings.c  device_settings.h  filelist.txt  lvgl_helpers.h  ota_update_dialog.c  signals.c  theme.h  ui.c  ui.h  ui_preconfig.c  ui_preconfig.h  ui_styles.c  ui_styles.h
main/ui/callbacks/: ui_callbacks.c  ui_callbacks.h
main/ui/components/: ui_comp_slider2.c
main/ui/config/: config_controls.c  config_controls.h  create_config_controls.c
main/ui/images/: ui_img_Smart_Car_Key.c
main/ui/menu/: config_modal.c  config_modal.h  custom_gear_section.c  design_tokens.h  dtc_reader.c  dtc_reader.h  edit_mode.c  edit_mode.h  gear_config.c  gear_config.h  inspector.c  inspector.h  menu_screen.c  menu_screen.h  obd2_picker.c  obd2_picker.h
main/ui/screens/: first_run_wizard.c  first_run_wizard.h  splash_screen.c  splash_screen.h  ui_Screen1.c  ui_Screen1.h  ui_Screen2.c  ui_Screen3.c  ui_Screen3.h  ui_Screen4.c  ui_can_list.c  ui_can_list.h  ui_diagnostics.c  ui_diagnostics.h  ui_ecu_picker.c  ui_ecu_picker.h  ui_peaks.c  ui_peaks.h  ui_wifi.c  ui_wifi.h
main/ui/settings/: device_settings.c  device_settings.h  preset_picker.c  preset_picker.h  settings_panel.c  settings_panel.h  ui_gear_setup.c  ui_gear_setup.h
main/web/: CMakeLists.txt  index.html
main/widgets/: CMakeLists.txt  font_manager.c  signal.c  signal.h  signal_internal.c  signal_internal.h  signal_sim.c  signal_sim.h  widget_arc.c  widget_arc.h  widget_bar.c  widget_bar.h  widget_button.c  widget_button.h  widget_dispatcher.c  widget_dispatcher.h  widget_fields.c  widget_fields.gen.c  widget_fields.h  widget_gear.c  widget_gear.h  widget_image.c  widget_image.h  widget_indicator.c  widget_indicator.h  widget_line.c  widget_line.h  widget_meter.c  widget_meter.h  widget_night_helpers.h  widget_panel.c  widget_panel.h  widget_registry.c  widget_registry.h  widget_rpm_bar.c  widget_rpm_bar.h  widget_rules.c  widget_shape_panel.c  widget_shape_panel.h  widget_shift_light.c  (+11 more)
schema/: widgets.schema.json
tests/: README.md
tests/api/: README.md  conftest.py  pytest.ini  requirements.txt  test_layout_api.py  test_layout_too_large.py  test_signal_api.py  test_system_api.py  test_touch_api.py
tests/native/: Makefile  run.ps1  test_calculated_gear.c  test_can_decode.c  test_ecu_preset_match.c  test_layout_migration.c  test_obd2_freeze_frame.c  test_ota_skip_version.c  test_web_path_safety.c  test_widget_arc_precedence.c  test_widget_rules.c  unity.c  unity.h
tests/native/mocks/: esp_heap_caps.h  esp_log.h  lvgl.h
tools/: WASM_BUILD_PROMPT.md  check_index_sync.py  check_widget_codegen.py  codegen_widget_defs.py  codegen_widget_inspector.py  mobile-dev-server.js  png_to_rdmimg.py  setup_wasm_project.sh  validate_widget_schema.py
tools/cloudflare-ota-proxy/: README.md  worker.js  wrangler.toml
tools/cloudflare-ota-proxy/.wrangler/cache/: wrangler-account.json
