idf_component_register(
    SRCS 
        "main.c"
        "can/can_decode.c"
        "can/can_manager.c"
        "can/can_bus_test.c"
        "storage/boot_assets.c"
        "storage/config_store.c"
        "storage/sd_manager.c"
        "storage/data_logger.c"
        "storage/signal_replay.c"
        "io/wire_inputs.c"
        "net/ota_handler.c"
        "net/ota_update_dialog.c"
        "net/web_server.c"
        "net/wifi_manager.c"
        "net/uart_protocol.c"
        "net/serial_protocol.c"
        "net/serial_commands.c"
        "net/mdns_service.c"
        "system/device_id.c"
        "system/rdm_settings.c"
        "system/screen_config.c"
        "system/display_capture.c"
        "system/night_mode.c"
        "ui/ui.c"
        "ui/dashboard.c"
        "ui/ui_styles.c"
        "ui/ui_helpers.c"
        "ui/utils.c"
        "ui/signals.c"
        "ui/settings/preset_picker.c"
        "ui/settings/device_settings.c"
        "ui/settings/settings_panel.c"
        "ui/components/ui_comp.c"
        "ui/components/ui_comp_hook.c"
        "ui/components/ui_comp_slider2.c"
        "ui/config_bridge.c"
        "ui/callbacks/ui_callbacks.c"
"ui/menu/config_modal.c"
        "ui/menu/menu_screen.c"
        "ui/screens/ui_Screen1.c"
        "ui/screens/ui_Screen2.c"
        "ui/screens/ui_Screen3.c"
        "widgets/widget_warning.c"
        "widgets/widget_indicator.c"
"widgets/widget_bar.c"
        "widgets/widget_panel.c"
        "widgets/widget_text.c"
        "widgets/widget_meter.c"
        "widgets/widget_rpm_bar.c"
        "widgets/widget_registry.c"
        "widgets/widget_image.c"
        "widgets/widget_types.c"
        "widgets/widget_shape_panel.c"
        "widgets/widget_arc.c"
        "widgets/widget_toggle.c"
        "widgets/widget_button.c"
        "widgets/widget_shift_light.c"
        "widgets/widget_rules.c"
        "widgets/font_manager.c"
        "widgets/signal_internal.c"
        "widgets/signal.c"
        "widgets/signal_sim.c"
        "layout/layout_manager.c"
        "layout/default_layout.c"
        "layout/layout_loader.c"
        "layout/ecu_presets.c"
        "ui/screens/splash_screen.c"
        "ui/screens/ui_Screen4.c"
        "ui/screens/ui_wifi.c"
        "ui/screens/ui_diagnostics.c"
        "ui/screens/ui_peaks.c"
        "ui/screens/first_run_wizard.c"
        "ui/screens/ui_ecu_picker.c"
        "ui/fonts/ui_font_fugaz_14.c"
        "ui/fonts/ui_font_fugaz_17.c"
        "ui/fonts/ui_font_fugaz_28.c"
        "ui/fonts/ui_font_fugaz_56.c"
        "ui/fonts/ui_font_Manrope_35_BOLD.c"
        "ui/fonts/ui_font_Manrope_54_BOLD.c"
        "ui/images/ui_img_rev_0_sticker_png.c"
        "ui/images/ui_img_rev_0_sticker2_png.c"
        "ui/images/ui_img_rev_0_sticker3_png.c"
        "ui/images/ui_temporary_image.c"
        "ui/images/ui_img_indicator_left_png.c"
        "ui/images/ui_img_indicator_right_png.c"
        "ui/images/ui_img_363163260.c"
        "ui/images/ui_img_648933004.c"
        "ui/images/ui_img_669363031.c"
        "ui/images/ui_img_rdm_logo_dash_png.c"
        "ui/images/ui_img_RDM_Light.c"
        "ui/images/ui_img_RDM_Dark.c"
        "ui/images/ui_img_RDM_Dark_2.c"
        "ui/images/ui_img_Smart_Car_Key.c"
    INCLUDE_DIRS 
        "."
        "./include"
        "can"
        "net"
        "storage"
        "io"
        "system"
        "ui"
        "ui/components"
        "ui/screens"
        "ui/fonts"
        "ui/images"
        "ui/settings"
        "ui/menu"
        "widgets"
        "layout"
        "design_mode"
        "web"
    REQUIRES 
        "driver"
        "esp_adc"
        "esp_lcd"
        "esp_lcd_touch"
        "esp_lcd_touch_gt911"
        "esp_timer"
        "lvgl"
        "nvs_flash"
        "fatfs"
        "esp_wifi"
        "esp_http_client"
        "json"
        "esp_https_ota"
        "app_update"
        "mbedtls"
        "esp-tls"
        "esp_http_server"
        "joltwallet__littlefs"
        "espressif__mdns"
    EMBED_TXTFILES "web/index.html"
    EMBED_FILES "embed/RDM.rdmimg"
)

target_compile_definitions(${COMPONENT_LIB} PUBLIC "-DLV_CONF_INCLUDE_SIMPLE")
target_compile_definitions(${COMPONENT_LIB} PUBLIC "-DLV_CONF_PATH=\"lv_conf.h\"")